test/files/neg/badimport.scala

import collection
import concurrent.Future

trait T
