test/files/neg/badimport.check
badimport.scala:2: error: . expected
import collection
                 ^
1 error
